--- a/chuok-frontend/src/app/components/footer/footer.component.css
+++ b/chuok-frontend/src/app/components/footer/footer.component.css
@@ -10,16 +10,16 @@ ul {
   list-style: none;
 }
 
-.example-2 {
+.footer-social-media-list {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.example-2 .icon-content {
+.footer-social-media-list .icon-content {
   margin: 0 10px;
   position: relative;
 }
-.example-2 .icon-content .tooltip {
+.footer-social-media-list .icon-content .tooltip {
   position: absolute;
   top: -30px;
   left: 50%;
@@ -32,12 +32,12 @@ ul {
   font-size: 14px;
   transition: all 0.3s ease;
 }
-.example-2 .icon-content:hover .tooltip {
+.footer-social-media-list .icon-content:hover .tooltip {
   opacity: 1;
   visibility: visible;
   top: -50px;
 }
-.example-2 .icon-content a {
+.footer-social-media-list .icon-content a {
   position: relative;
   overflow: hidden;
   display: flex;
@@ -50,19 +50,19 @@ ul {
   background-color: #fff;
   transition: all 0.3s ease-in-out;
 }
-.example-2 .icon-content a:hover {
+.footer-social-media-list .icon-content a:hover {
   box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
 }
-.example-2 .icon-content a svg {
+.footer-social-media-list .icon-content a svg {
   position: relative;
   z-index: 1;
   width: 30px;
   height: 30px;
 }
-.example-2 .icon-content a:hover {
+.footer-social-media-list .icon-content a:hover {
   color: white;
 }
-.example-2 .icon-content a .filled {
+.footer-social-media-list .icon-content a .filled {
   position: absolute;
   top: auto;
   bottom: 0;
@@ -72,21 +72,21 @@ ul {
   background-color: #000;
   transition: all 0.3s ease-in-out;
 }
-.example-2 .icon-content a:hover .filled {
+.footer-social-media-list .icon-content a:hover .filled {
   height: 100%;
 }
 
-.example-2 .icon-content a[data-social="linkedin"] .filled,
-.example-2 .icon-content a[data-social="linkedin"] ~ .tooltip {
+.footer-social-media-list .icon-content a[data-social="linkedin"] .filled,
+.footer-social-media-list .icon-content a[data-social="linkedin"] ~ .tooltip {
   background-color: #0274b3;
 }
 
-.example-2 .icon-content a[data-social="github"] .filled,
-.example-2 .icon-content a[data-social="github"] ~ .tooltip {
+.footer-social-media-list .icon-content a[data-social="github"] .filled,
+.footer-social-media-list .icon-content a[data-social="github"] ~ .tooltip {
   background-color: #24262a;
 }
-.example-2 .icon-content a[data-social="instagram"] .filled,
-.example-2 .icon-content a[data-social="instagram"] ~ .tooltip {
+.footer-social-media-list .icon-content a[data-social="instagram"] .filled,
+.footer-social-media-list .icon-content a[data-social="instagram"] ~ .tooltip {
   background: linear-gradient(
     45deg,
     #405de6,
@@ -97,8 +97,8 @@ ul {
     #fd1f1f
   );
 }
-.example-2 .icon-content a[data-social="youtube"] .filled,
-.example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
+.footer-social-media-list .icon-content a[data-social="youtube"] .filled,
+.footer-social-media-list .icon-content a[data-social="youtube"] ~ .tooltip {
   background-color: #ff0000;
 }
 
@@ -187,7 +187,7 @@ ul {
         grid-row: 1 / 2;
     }
 
-    .example-2 {
+    .footer-social-media-list {
       padding: 10px 0;
     }
     .footer-links {
