--- a/chuok-frontend/src/app/components/header-main/header-main.component.html
+++ b/chuok-frontend/src/app/components/header-main/header-main.component.html
@@ -1,7 +1,13 @@
+<!--
+  Header for the landing page and other public pages.
+  Displays the chuOK logo linking to the main page.
+  Navigation bar toggles open/close on click, showing links to About, Contact, and Login pages.
+  Each navigation link closes the nav menu on click.
+-->
 <header class="header">
     <a routerLink="/main"><img class="main-logo-picture" src="assets/images/chuOK-logo.png" alt="Home Logo"></a>
 </header>
-  <nav #navBar class="nav-bar" [class.open]="navOpen" (click)="toggleNav()">
+<nav #navBar class="nav-bar" [class.open]="navOpen" (click)="toggleNav()">
   <ng-container *ngIf="navOpen">
     <a routerLink="/about" class="bounce-hover" (click)="closeNav()" title="About">
       <img class="logo-picture" src="assets/images/pages/about.png" alt="About">
