--- a/chuok-frontend/src/app/pages/literature/literature.component.html
+++ b/chuok-frontend/src/app/pages/literature/literature.component.html
@@ -1,3 +1,9 @@
+<!--
+  Literature adventure page.
+  Navigation bar for adventure subpages (literature, science, nature).
+  Displays level buttons for each literature level, with completed state and modal popup for questions.
+  Includes modal overlay for answering level questions.
+-->
 <nav class="filter">
   <ul class="filter-list">
       <li>
@@ -20,6 +26,7 @@
 <main class="level-path">
       <div class="level-path-container" style="background-image: url('assets/images/level-path-bg/literature-path-bg-vert.png'); background-size: cover; background-position: center;">
         <ng-container *ngIf="levels && levels.length">
+          <!-- Render a button for each level. Completed levels are disabled and styled. -->
           <button
             *ngFor="let level of levels; let i = index" 
             class="level-button" 
@@ -42,6 +49,7 @@
             <img class="logo-picture" src="assets/images/characters/literature-no-bg.png" alt="Literature Logo">
             <p>{{ levels[selectedLevelIndex!].question }}</p>
             <div class="answer-container">
+              <!-- Render answer options for the current level -->
               <div
                 *ngFor="let option of [levels[selectedLevelIndex!].option1, levels[selectedLevelIndex!].option2, levels[selectedLevelIndex!].option3, levels[selectedLevelIndex!].option4]; let i = index"
                 class="answer"
